Upgraded to Spring Boot 2.0.0.M7.